src/test/ui/rfc1445/feature-gate.no_gate.stderr
error[E0658]: the semantics of constant patterns is not yet settled (see issue #31434)
  --> $DIR/feature-gate.rs:13:1
   |
LL | #[structural_match] //[no_gate]~ ERROR semantics of constant patterns is not yet settled
   | ^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(structural_match)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
